--- a/swadge/pulse/index.html
+++ b/swadge/pulse/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
+    <script type="module" src="https://unpkg.com/esp-web-tools@8.0.1/dist/web/install-button.js?module"></script>
     <!-- <script type="module" src="https://unpkg.com/esp-web-tools@10.1.1/dist/web/install-button.js?module"></script> -->
-    <script type="module" src="./esp-web-tools-10.1.1/install-button.js?module"></script>
+    <!-- <script type="module" src="./esp-web-tools-10.1.1/install-button.js?module"></script> -->
 </head>
 
 <body>
