Add and use esp-web-tool 8.0.6

--- a/swadge/pulse/index.html
+++ b/swadge/pulse/index.html
@@ -1,8 +1,11 @@
 <html>
 
 <head>
-    <script type="module" src="https://unpkg.com/esp-web-tools@8.0.1/dist/web/install-button.js?module"></script>
+    <!-- Version 8.0.6 is ole reliable. See https://github.com/esphome/esp-web-tools/issues/375 -->
+
+    <!-- <script type="module" src="https://unpkg.com/esp-web-tools@8.0.6/dist/web/install-button.js?module"></script> -->
     <!-- <script type="module" src="https://unpkg.com/esp-web-tools@10.1.1/dist/web/install-button.js?module"></script> -->
+    <script type="module" src="./esp-web-tools-8.0.6/install-button.js?module"></script>
     <!-- <script type="module" src="./esp-web-tools-10.1.1/install-button.js?module"></script> -->
 </head>
 
