Don't use breadcrumb styling

--- a/swadge/pulse/index.html
+++ b/swadge/pulse/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <header class="container">
-        <nav aria-label="breadcrumb" style="--pico-nav-breadcrumb-divider: '•';">
+        <nav>
             <ul>
                 <li>
                     <h1>Pulse Swadge Firmware Updater</h1>
