Update files on flasher page to 3.1.1 tag

--- a/swadge/pulse/index.html
+++ b/swadge/pulse/index.html
@@ -125,10 +125,10 @@
                 <h3>Offline Firmware Update</h3>
             </header>
             If you are having trouble using this tool, you may instead download the <a
-                href="https://github.com/AEFeinstein/Super-2024-Swadge-FW/releases/download/v3.1.0/9b7b99f_swadge2024-firmware.zip">Firmware
+                href="https://github.com/AEFeinstein/Super-2024-Swadge-FW/releases/download/v3.1.1/f05e5d7_swadge2024-firmware.zip">Firmware
                 Update
                 Utility</a> and follow <a
-                href="https://github.com/AEFeinstein/Super-2024-Swadge-FW/blob/main/tools/pyFlashGui/README.md">the
+                href="https://github.com/AEFeinstein/Super-2024-Swadge-FW/blob/v3.1.1/tools/pyFlashGui/README.md">the
                 Firmware Update Utility instructions</a>.
         </article>
         <script>
