--- a/swadge/pulse/index.html
+++ b/swadge/pulse/index.html
@@ -110,7 +110,8 @@
                                     --esp-tools-button-color: #0172AD"></esp-web-install-button>
                         </div>
                     </li>
-                    <li>After the update completes turn your Swadge off and on. If it says "Swadge 3.1" at the top,
+                    <li>After the update completes turn your Swadge off and on by unplugging it and plugging it back in
+                        <i>without</i> holding down the programming button. If it says "Swadge 3.1" at the top,
                         you're good to go!<br />
                         <div style="justify-content: center; align-items: center; display: flex;">
                             <img src="images/flash-done.png"
